WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274913
firstRectForCharacterRange returns the original range instead of the actualRange for the first selection rect.
https://bugs.webkit.org/show_bug.cgi?id=274913
Summary
firstRectForCharacterRange returns the original range instead of the actualRa...
Megan Gardner
Reported
2024-05-30 11:50:47 PDT
firstRectForCharacterRange returns the original range instead of the actualRange for the first selection rect.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-05-30 11:50:55 PDT
<
rdar://problem/129013199
>
Megan Gardner
Comment 2
2024-05-30 12:03:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29323
EWS
Comment 3
2024-05-31 07:14:47 PDT
Committed
279576@main
(c585393d11f1): <
https://commits.webkit.org/279576@main
> Reviewed commits have been landed. Closing PR #29323 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug