firstRectForCharacterRange returns the original range instead of the actualRange for the first selection rect. https://bugs.webkit.org/show_bug.cgi?id=274913 rdar://129013199

Reviewed by Wenson Hsieh.

Existing FIXME, pass the actual range of the first
line of the selection instead of just passing back the
range that was passed in.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::firstRectForCharacterRangeAsync):
* Tools/TestWebKitAPI/Tests/mac/WKWebViewMacEditingTests.mm:
(TEST(WKWebViewMacEditingTests, FirstRectForCharacterRange)):

Canonical link: https://commits.webkit.org/279576@main